Updated bstats method to URI
The old method for sending bstats was deprecated. Updated to new URI method.